<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.nasaimageoftheday.MainActivity2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailto"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <EditText
        android:id="@+id/edit_text_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:autofillHints="email address"
        android:text="@string/email_default_text"
        tools:ignore="LabelFor" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_subject"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <EditText
        android:id="@+id/edit_text_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject"
        android:autofillHints="@string/email_subject"
        tools:ignore="LabelFor" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:lines="10"
        android:autofillHints="@string/text_message"
        android:inputType="textLongMessage"
        tools:ignore="LabelFor" />
    <Button
        android:id="@+id/button_send"
        android:background="@color/purple_700"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:bottomRightRadius="10dp"
        android:bottomLeftRadius="10dp"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_button" />
</LinearLayout>
