<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageOfTheDay">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="344dp"
        android:layout_height="239dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/image_of_the_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/viewTitle"
        android:textStyle="bold"
        android:layout_width="333dp"
        android:layout_height="46dp"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/viewDate"
        android:layout_width="360dp"
        android:layout_height="25dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/textview2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/viewDesc"
        android:layout_width="339dp"
        android:layout_height="279dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        android:text="@string/textview3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDate" />

    <Button
        android:id="@+id/button"
        android:layout_width="123dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:text="Download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="144dp"
        android:layout_height="13dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="24dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/viewDate"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:backgroundTint="@color/teal_200"
        android:contentDescription="@string/floating_action_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_help_24" />

</androidx.constraintlayout.widget.ConstraintLayout>